--- a/MiniPoll/app/src/main/AndroidManifest.xml
+++ b/MiniPoll/app/src/main/AndroidManifest.xml
@@ -3,20 +3,26 @@
     package="lsinf1225.mini_poll">
 
     <application
+        android:name="lsinf1225.mini_poll.MiniPollApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name="lsinf1225.mini_poll.activity.LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
+        <activity
+            android:name="lsinf1225.mini_poll.activity.MainActivity"
+            android:label="@string/main_activity_title" />
+
     </application>
 
 </manifest>
