--- a/MiniPoll/app/src/main/AndroidManifest.xml
+++ b/MiniPoll/app/src/main/AndroidManifest.xml
@@ -40,9 +40,10 @@
         <activity
             android:name="lsinf1225.mini_poll.activity.ShowListActivity"
             android:label="@string/friends_list" />
+
         <activity
-            android:name="lsinf1225.mini_poll.activity.SearchActivity"
-            android:label="@string/friends_find" />
+            android:name="lsinf1225.mini_poll.activity.ShowListSondageActivity"
+            android:label="@string/surveys_manage_title" />
 
     </application>
 
